<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="TxHmiMru" Id="{e7e539bd-33e9-404a-b164-57a9d3c3dbdc}">
    <Declaration><![CDATA[TYPE TxHmiMru :
STRUCT
	status : DINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>